wrote the 03 handcoding project

--- a/01test/index.html
+++ b/01test/index.html
@@ -8,8 +8,70 @@
 
     <body>
         <h1>
-            This is a level one heading!
+           September
         </h1>
+
+        <h2>
+           Its My Birthday!
+        </h2>
+
+        <p>
+            My birhtday is something that is selebrated once a year in September.
+        </p>
+
+        <h2>
+            The New holliday
+         </h2>
+ 
+         <p>
+            The New Holliday is soemthing I made up that happens every year in September. Its where you give all your money to people who where born in September.
+         </p>
+
+        <hr>
+
+        <h1>
+            October
+         </h1>
+ 
+         <h2>
+            Halloween
+         </h2>
+ 
+         <p>
+             Halloween is something that happens every year in October, its a fun holliday that had lots of candies.
+         </p>
+ 
+         <h2>
+             Its Hallies Birthday!
+          </h2>
+  
+          <p>
+             Hallies birhtday is something very speshal that is selebrated once a year that is in September.
+          </p>
+          
+         <hr>
+
+         <h1>
+            December
+         </h1>
+ 
+         <h2>
+            Christmas
+         </h2>
+ 
+         <p>
+            Christmas is a holliday that happens every year in December, its a fun holliday that had lots of presents.
+         </p>
+ 
+         <h2>
+             Snows a lot
+          </h2>
+  
+          <p>
+             Snow is something that is a seasonal type thing but usually happens every year in December.
+          </p>
+          
+
     </body>
 
 </html>
