--- a/project/form.html
+++ b/project/form.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     
 
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
