--- a/project/thanks.html
+++ b/project/thanks.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="5;url=index.html">
     <title>Document</title>
+
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
     
     <link rel="stylesheet" href="styles.css">
 </head>
