--- a/project/index.html
+++ b/project/index.html
@@ -29,6 +29,8 @@
             <a style="text-decoration: none;" href="gallery.html"> | Gallery </a>
             <br>
             <a style="text-decoration: none;" href="form.html"> | Take Our Survay!</a>
+            <br>
+            <a style="text-decoration: none;" href="map.html"> | Contact Us</a>
         </ul>
     </nav>
 
