--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p><a href="08media">Media Assignment</a></p>
 
 		<h3> Project</h3>
-		<p><a href="project"></a></p>
+		<p><a href="project">Project</a></p>
 		
 		<h3>Optional Capstone Activity</h3>
 		<p><a href="vacation">Vacation Web Site</a></p>
